6-Carga-Servicios-labels/frontend3.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-istio-v2-deploy
  namespace: test-services
  labels:
    app: front-istio
    version: v2
spec:
  selector:
    matchLabels:
      app: front-istio
      version: v2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: front-istio
        version: v2
    spec:
      containers:
        - name: front-istio
          image: acjimeneza/front-istio:2
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
---
