6-Carga-Servicios-labels/destinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-front-istio
  namespace: test-services
spec:
  host: front-istio.test-services.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
